[package]
name = "ws-chalk"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.3", features = ["ws"] }
axum-macros = "0.4.1"
futures = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
shuttle-axum = "0.36.0"
shuttle-runtime = "0.36.0"
tokio = "1.28.2"
tokio-stream = "0.1.14"
tower-http = { version = "0.5.1", features = ["fs"] }
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
