[package]
name = "shuttle-axum-ws-chat-app"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.3", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["cookie", "cookie-private"] }
axum-macros = "0.4.1"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
futures = "0.3.30"
rustls = "0.22.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
surrealdb = "1.1.1"
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
